# pylint-sarif

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/pylint_sarif/: __init__.py
tests/: test_reporter.py
